The navigation items in the header no longer wrap on an iPhone 6+

--- a/findaphotoserver/content/src/app/components/header/header.component.css
+++ b/findaphotoserver/content/src/app/components/header/header.component.css
@@ -1,4 +1,4 @@
-@media (max-width: 400px){
+@media (max-width: 420px){
     .navigation-item {
         padding: 0 0 0 7px;
     }
